compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__unknown_module.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: import xpto
---
----- SOURCE CODE
import xpto

----- ERROR
error: Unknown module
  ┌─ /src/one/two.rakun:1:1
  │
1 │ import xpto
  │ ^^^^^^^^^^^

No module has been found with the name `xpto`.
