compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__unknown_module_suggest_import.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn main() {\n  utils.helpful()\n}\n"
---
----- SOURCE CODE
-- utils.rakun
pub fn helpful() {}

-- main.rakun

pub fn main() {
  utils.helpful()
}


----- ERROR
error: Unknown module
  ┌─ /src/one/two.rakun:3:3
  │
3 │   utils.helpful()
  │   ^^^^^

No module has been found with the name `utils`.
Hint: Did you mean to import `utils`?
