compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__unknown_record_field.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub record Box<a> { Box(inner: a) }\npub fn main(box: Box<Int>) { box.unknown }\n"
---
error: Unknown record field
  ┌─ /src/one/two.rakun:3:33
  │
3 │ pub fn main(box: Box<Int>) { box.unknown }
  │                                 ^^^^^^^^ Did you mean `inner`?

The value being accessed has this type:

    Box<Int>

It has these fields:

    .inner
