compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__unknown_variable.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: x
---
----- SOURCE CODE
x

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.rakun:1:1
  │
1 │ x
  │ ^

The name `x` is not in scope here.
