compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__unknown_variable_update.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub record Person {\n  Person(name: String, age: Int)\n}\npub fn update_person() {\n  Person(..person)\n}"
---
error: Unknown variable
  ┌─ /src/one/two.rakun:6:12
  │
6 │   Person(..person)
  │            ^^^^^^ Did you mean `Person`?

The name `person` is not in scope here.
